Fix for bug 86532. outliner doesn't display large fonts properly.

- added |min-height: 18px| to |-moz-tree-row| pseudoelement
- changed height to |height: 1.3em|
- the final height is aligned to even number.
- GetRowHeight() moved to Init()

r=bryner, sr=hyatt, a=asa